Reset event bindings in AppBannerManager::OnInstall.

This addresses a bug where sites using the beforeinstallpromptevent to
implement an install button could have users trigger a do-nothing
install prompt if the user first used the menu item "Add to Shelf" to
install, and then pressed the beforeinstallprompt-connected button.

Resetting the event binding when the OnInstall() method is triggered
means that when an install is started, all outstanding
beforeinstallpromptevents are voided, fixing the bug.

BUG=823602

Change-Id: Ib2c747c74f7083a7663580ed37da7a319d9a9c60
Reviewed-on: https://chromium-review.googlesource.com/970050
Reviewed-by: Matt Giuca <mgiuca@chromium.org>
Commit-Queue: Dominick Ng <dominickn@chromium.org>
Cr-Commit-Position: refs/heads/master@{#544317}
Former-commit-id: 10f218c6c9b29d8a163c87a7b6a725a39bf2d07f